--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<a href="index.html"class="menu__link
             menu__link--select">Inicio</a>
 			<a href="productos.html" class="menu__link">Productos</a>
-			<a href="cursos.html" class="menu__link">Cursos</a>
+			<a href="cursos.html" class="menu__link">Link a Cursos</a>
 			<a href="contacto.html"class="menu__link">Contacto</a>
 			</nav>
 		</div>	
